# textflowrhyme-backend

./: .gitignore  .python-version  Dockerfile  README.md  Taskfile.yml  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deployment.yml  testing.yml
textflowrhyme/: alembic.ini  app.py  conftest.py  settings.py
textflowrhyme/apps/books/api/: serializers.py
textflowrhyme/apps/books/api/routers/: book.py  page.py
textflowrhyme/apps/books/api/serializers/: __init__.py  book.py  page.py
textflowrhyme/apps/books/models/: __init__.py  book.py  page.py
textflowrhyme/apps/books/tests/: fixtures.py
textflowrhyme/apps/books/tests/api/: test_create_book.py  test_delete_book.py  test_read_book.py  test_update_book.py
textflowrhyme/apps/books/tests/api/book/: test_create_book.py  test_delete_book.py  test_read_book.py  test_update_book.py
textflowrhyme/apps/books/tests/api/page/: test_create_page.py  test_delete_page.py  test_read_page.py  test_update_page.py
textflowrhyme/apps/documents/api/: serializers.py
textflowrhyme/apps/documents/api/routers/: document.py
textflowrhyme/apps/documents/entities/: node.py
textflowrhyme/apps/documents/processors/: document_analyzer.py  document_tree_converter.py
textflowrhyme/apps/documents/tests/api/: test_analyze_fatigue.py  test_analyze_length.py  test_analyze_pos.py
textflowrhyme/apps/texts/api/: serializers.py
textflowrhyme/apps/texts/api/routers/: text.py
textflowrhyme/apps/texts/processors/: text_rewriter.py
textflowrhyme/apps/texts/tests/: conftest.py
textflowrhyme/apps/texts/tests/api/: test_rewrite_text.py
textflowrhyme/apps/texts/tests/processors/: test_text_rewriter.py
textflowrhyme/apps/trees/entities/: tree.py
textflowrhyme/apps/trees/processors/: tree_document_converter.py  tree_fatigue_analyzer.py  tree_length_analyzer.py  tree_pos_analyzer.py
textflowrhyme/apps/users/: conftest.py  constants.py
textflowrhyme/apps/users/api/routers/: authentication.py  user.py
textflowrhyme/apps/users/api/serializers/: user.py
textflowrhyme/apps/users/models/: user.py
textflowrhyme/apps/users/tests/: conftest.py
textflowrhyme/apps/users/tests/api/: test_auth_forgot_password.py  test_auth_jwt_login.py  test_auth_register.py
textflowrhyme/apps/users/utils/: database.py  fastapi_users.py  manager.py
textflowrhyme/apps/users/utils/auth/: backend.py  permissions.py  strategy.py
textflowrhyme/base/: entities.py  processors.py
textflowrhyme/base/api/: serializers.py
textflowrhyme/base/database/: engine.py  model.py  session.py
textflowrhyme/base/views/: render.py
textflowrhyme/database/: engine.py  session.py
textflowrhyme/migrations/: env.py  script.py.mako
textflowrhyme/migrations/versions/: 0001_initial.py
textflowrhyme/shortcuts/: database.py  models.py  view.py
